atlas-udd/sonar/sonar_dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: atlas-sonar
  namespace: atlas-udd
  labels:
    name: atlas-sonar
spec:
  replicas: 1
  template:
    metadata:
      name: atlas-sonar
      labels:
        app: atlas-sonar
    spec:
      containers:
        - image: atlas_udd/sonarqube:1.0
          name: atlas-sonar
          ports:
            - containerPort: 9000
              name: sonarport
          volumeMounts:
            - name: v-sonar-home-data
              mountPath: /opt/sonarqube/data
      volumes:
        - name: v-sonar-home-data
          emptyDir: {}
