atlas-udd/sonar/sonar_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas-sonar
  namespace: atlas-udd
  labels:
    name: atlas-sonar
spec:
  type: NodePort
  ports:
    - port: 19000 
      targetPort: 9000
      name: sonarport
  selector:
    app: atlas-sonar
